--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "stilton.space",
   "version": "1.0.0",
   "description": "Stilton Space is a website where you can convert boring old text into a Geronimo Stilton-style explosion of typographical goodness",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "app.js",
+  "dependencies": {
+    "ibm-watson": ">=5.7.1"
   },
   "keywords": [],
   "author": "Andrew Leber + xiao ni",
